feat: update api docs and allow search for existing sessions
